tests/custom-service/simple-spring-service/expected/custom-service/templates/post-deployment/ingress-public.yaml
---
# Source: custom-service/templates/post-deployment/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myservice-public
  namespace: "team-supercool"
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: 502
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx-public
  rules:
    - host: myservice.mycompany.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 80
